--- a/flexbox/1-styles.css
+++ b/flexbox/1-styles.css
@@ -10,14 +10,160 @@
 /* Reset / Normalize
    ============================= */
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
-
-/* Variables
-   ============================= */
-
-   :root {
-    --color-primary: #D73953;
-    --color-black:  #090909;
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+html {
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+  }
+  body {
+    margin: 0;
+  }
+  main {
+    display: block;
+  }
+  h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+  }
+  hr {
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+  }
+  pre {
+    font-family: monospace, monospace;
+    font-size: 1em;
+  }
+  a {
+    background-color: transparent;
+  }
+  abbr[title] {
+    border-bottom: none;
+    text-decoration: underline;
+    text-decoration: underline dotted;
+  }
+  b,
+  strong {
+    font-weight: bolder;
+  }
+  code,
+  kbd,
+  samp {
+    font-family: monospace, monospace;
+    font-size: 1em;
+  }
+  small {
+    font-size: 80%;
+  }
+  sub,
+  sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+  }
+  sub {
+    bottom: -0.25em;
+  }
+  sup {
+    top: -0.5em;
+  }
+  img {
+    border-style: none;
+  }
+  button,
+  input,
+  optgroup,
+  select,
+  textarea {
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+  }
+  button,
+  input {
+    overflow: visible;
+  }
+  button,
+  select {
+    text-transform: none;
+  }
+  [type="button"],
+  [type="reset"],
+  [type="submit"],
+  button {
+    -webkit-appearance: button;
+  }
+  [type="button"]::-moz-focus-inner,
+  [type="reset"]::-moz-focus-inner,
+  [type="submit"]::-moz-focus-inner,
+  button::-moz-focus-inner {
+    border-style: none;
+    padding: 0;
+  }
+  [type="button"]:-moz-focusring,
+  [type="reset"]:-moz-focusring,
+  [type="submit"]:-moz-focusring,
+  button:-moz-focusring {
+    outline: 1px dotted ButtonText;
+  }
+  fieldset {
+    padding: 0.35em 0.75em 0.625em;
+  }
+  legend {
+    box-sizing: border-box;
+    color: inherit;
+    display: table;
+    max-width: 100%;
+    padding: 0;
+    white-space: normal;
+  }
+  progress {
+    vertical-align: baseline;
+  }
+  textarea {
+    overflow: auto;
+  }
+  [type="checkbox"],
+  [type="radio"] {
+    box-sizing: border-box;
+    padding: 0;
+  }
+  [type="number"]::-webkit-inner-spin-button,
+  [type="number"]::-webkit-outer-spin-button {
+    height: auto;
+  }
+  [type="search"] {
+    -webkit-appearance: textfield;
+    outline-offset: -2px;
+  }
+  [type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+  ::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    font: inherit;
+  }
+  details {
+    display: block;
+  }
+  summary {
+    display: list-item;
+  }
+  template {
+    display: none;
+  }
+  [hidden] {
+    display: none;
+  }
+  
+  /* Variables
+     ============================= */
+  
+  :root {
+    --color-primary: #d73953;
+    --color-black: #090909;
     --color-white: #ffffff;
     --color-grey: #a0a0a0;
     --color-light-grey: #f3f3f3;
@@ -25,8 +171,8 @@
   
     --text-color: var(--color-black);
   
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
@@ -74,7 +220,7 @@
     --nav-item-font-family: var(--font-family-headings);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: .04rem;
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 2rem 0 0;
     --nav-item-link-hover: var(--color-white);
@@ -91,20 +237,22 @@
     --button-hover-background: var(--color-primary);
   
     /** MOTION **/
-    --transition-duration: .3s;
+    --transition-duration: 0.3s;
     --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
   }
   
   /* Base
-      ============================= */
+        ============================= */
   
-  *, *:before, *:after {
+  *,
+  *:before,
+  *:after {
     box-sizing: border-box;
   }
   
   html {
-  scroll-behavior: smooth;
-  font-size: 62.5%;
+    scroll-behavior: smooth;
+    font-size: 62.5%;
   }
   
   body {
@@ -115,7 +263,12 @@
     line-height: var(--line-height-base);
   }
   
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
   }
@@ -155,7 +308,7 @@
   }
   
   /* Helpers
-      ============================= */
+        ============================= */
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
@@ -169,7 +322,7 @@
   /*** 2. LAYOUT ***/
   
   /* Layout
-      ============================= */
+        ============================= */
   
   .container {
     width: 960px;
@@ -178,23 +331,19 @@
   }
   
   /* Grid
-      ============================= */
+        ============================= */
+  
+  .row {
+    display: flex;
+  }
   
   ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
-    display: flex;
   }
   
-  .row::after {
-    content: none;
-    display: table;
-    clear: both;
-  }
-  
-  [class*='col-'] {
-    float: none;
+  [class*="col-"] {
     padding: 0.5rem;
   }
   
@@ -207,7 +356,7 @@
   }
   
   /* Navbar
-      ============================= */
+        ============================= */
   
   .navbar-menu {
     float: right;
@@ -241,7 +390,7 @@
   }
   
   .nav .nav-link::before {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 0;
     left: 0;
@@ -257,13 +406,13 @@
   }
   
   /* Header
-      ============================= */
+        ============================= */
   
   .header {
     padding: var(--header-padding);
-         position: relative;
-         z-index: 3;
-         background: transparent;
+    position: relative;
+    z-index: 3;
+    background: transparent;
   }
   
   .header-logo {
@@ -278,7 +427,7 @@
   }
   
   /* Footer
-      ============================= */
+        ============================= */
   
   .footer {
     --nav-item-font-weight: normal;
@@ -311,7 +460,7 @@
   /*** 3. SECTION ***/
   
   /* Section (all styles)
-      ============================= */
+        ============================= */
   
   .section {
     padding: var(--section-padding);
@@ -348,7 +497,7 @@
   }
   
   /* Section theming
-      ============================= */
+        ============================= */
   
   [data-section-theme="dark"] {
     --button-color: var(--color-white);
@@ -358,7 +507,7 @@
   }
   
   /* Section HERO
-      ============================= */
+        ============================= */
   
   .section-hero {
     background-position: 75% 0;
@@ -378,14 +527,14 @@
   /*** 4. CARD ***/
   
   /* Card (all styles)
-      ============================= */
+        ============================= */
   
   .card-category {
     color: var(--color-primary);
   }
   
   /* Card WORK
-      ============================= */
+        ============================= */
   
   .card-work .card-outer {
     position: relative;
@@ -442,7 +591,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    content: '';
+    content: "";
   }
   
   .card-work:hover .card-title {
@@ -450,7 +599,7 @@
   }
   
   /* Card SERVICES
-      ============================= */
+        ============================= */
   
   .card-services .card-title {
     margin: 0;
@@ -471,7 +620,7 @@
   }
   
   /* Card TESTIMONIAL
-      ============================= */
+        ============================= */
   
   .card-testimonial {
     text-align: center;
@@ -494,7 +643,7 @@
   }
   
   .card-testimonial .card-quote::before {
-    content: '\201C';
+    content: "\201C";
     position: absolute;
     top: -4.5rem;
     left: -1rem;
