--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -524,6 +524,13 @@ html {
     padding: 10rem 40rem 2rem 0;
   }
   
+  /* Section Latest news
+        ============================= */
+  
+  .section-latest-news .row {
+    flex-direction: row-reverse;
+  }
+  
   /*** 4. CARD ***/
   
   /* Card (all styles)
