--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -524,6 +524,20 @@ html {
     padding: 10rem 40rem 2rem 0;
   }
   
+  /* Section Latest news
+        ============================= */
+  
+  .section-latest-news .row {
+    flex-direction: row-reverse;
+  }
+  
+  /* Section SERVICES 
+        ============================= */
+  
+  .section-services .row {
+    flex-wrap: wrap;
+  }
+  
   /*** 4. CARD ***/
   
   /* Card (all styles)
